2005-12-05  Jimmy Gredler  <jimmy@backup-manager.org>

	* t/confs/tarball-incremental.conf:
	  + Changed the tarball directory to $PWD
	* t/confs/tarball.conf:
	  + Changed the tarball directory to $PWD
	* t/confs/upload-global.conf:
	  + Create an upload directory if it doesn't exist
	* t/confs/upload-rsync.conf:
	  + Changed the rsync directory to $PWD
	  + Use the current user as  BM_UPLOAD_SSH_USER and the ssh identity
		  bm-test

2005-12-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager.conf.tpl:
	  + added the "none" methods in backup and upload sections.
	* lib/actions.sh:
	  + it's possible to choose none of the backup methods.
	  + it's possible to choose none of the upload methods.
	* t/t01.sh:
	  + This test now uses the tarball method for building and archive of
	  /etc, if it manages to build the archives, the test succeeds.
	* t/t02.sh:
	  + Upload some stuff with rsync (to be updated)...
	* t/t03.sh:
	  + Test that "none" is possible in the methods keys.

2005-12-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/upload-methods.sh:
	  + rsync stuff works properly with root and with BM_UPLOAD_SSH_USER.

2005-12-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager.conf.tpl:
	  + replaced BM_RSYNC by BM_UPLOAD_RSYNC
	* lib/actions.sh:
	  + Renamed -snapshot by _snaphot
	* lib/files.sh:
	  + Some more checks.
	* lib/sanitize.sh:
	  + Better sanitizers for the RSYNC stuff.
	* lib/upload-methods.sh:
	  + bm_upload_rsync_common() now managed rsync transfers with
	  BM_UPLOAD_SSH_USER and call SSH in BatchMode.
	  + Logs errors in a temp logfile.
	* t/t02.sh:
	  + test script for RSYNC stuff.

2005-12-05  Alexis Sukrieh  <sukria@backup-manager.org>

	* added the t/ directory for handling tests. 
	+ t/confs/base.conf
	+ t/confs/burning.conf
	+ t/confs/mysql.conf
	+ t/confs/pipe.conf
	+ t/confs/svn.conf
	+ t/confs/tarball-incremental.conf
	+ t/confs/tarball.conf
	+ t/confs/upload-ftp.conf
	+ t/confs/upload-global.conf