@@ -1,4 +1,4 @@
 export BM_UPLOAD_RSYNC_DIRECTORIES="$PWD"
 export BM_UPLOAD_RSYNC_HOSTS="localhost"
 export BM_UPLOAD_SSH_USER="$USER"
-export BM_UPLOAD_SSH_KEY="${USER}/.ssh/bm-test"
+export BM_UPLOAD_SSH_KEY="/home/${USER}/.ssh/bm-test"
